@@ -1435,6 +1435,6 @@ void identify(object *op) {
             /* A lot of the values can change from an update - might as well send
              * it all.
              */
-            esrv_send_item(pl, op);
+            esrv_update_item(UPD_ALL, pl, op);
     }
 }
